# StockSight

./: .gitignore  LICENSE.md  README.md  _config.yml  config.json  pyproject.toml  requirements.txt  stocksight
.github/workflows/: python-app.yml
data/: merged_price_and_sentiment.csv  news_data.csv  news_sentiments.csv  price_data.csv
data/scalers/: scaler_X.save  scaler_y.save
scripts/: data.py  evaluate.py  sentiments.py  stock.py  train.py  utils.py
stocksight/: cli.py  data.py  evaluate_model.py  models.py  news.py  predict_future_price.py  sentiments.py  stock.py  train_model.py  utils.py
tests/: test_news.py  test_pipeline.py  test_training_loss.py
utils/: data.py  evaluate_model.py  predict_future_price.py  sentiments.py  stock.py  train_model.py  utils.py
